# TIL

./: .gitignore  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
2022/: index.html
2022/10/17/01/: README.MD  index.html
2022/11/01/01/: README.md
article/: index.html
article/2022/: index.html
article/2022/10/17/01/: index.html
code/2022/10/17/01/: 01.py  02.py
docs/: index.md
docs/2022/10/17/01/: README.md
docs/article/2022/10/17/01/: README.md
docs/log/2023/05/02/: README.md
docs/log/2023/05/03/: README.md
log/: index.html
log/2023/: index.html
log/2023/05/03/: index.html
overrides/partials/: comments.html
search/: search_index.json
