[tool.poetry]
name = "TIL"
version = "1"
description = "What I Leaned Today"
authors = ["Taehyun Lee <0417taehyun@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs-material = "^9.1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
